@@ -149,7 +149,7 @@ public class TestDoc extends LuceneTestCase {
       out.close();
       sw.close();
 
-      String multiFileOutput = sw.getBuffer().toString();
+      String multiFileOutput = sw.toString();
       //System.out.println(multiFileOutput);
 
       sw = new StringWriter();
@@ -190,7 +190,7 @@ public class TestDoc extends LuceneTestCase {
       directory.close();
       out.close();
       sw.close();
-      String singleFileOutput = sw.getBuffer().toString();
+      String singleFileOutput = sw.toString();
 
       assertEquals(multiFileOutput, singleFileOutput);
    }
